<resources>
    <string name="app_name">Mobi</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chat</string>
    <string name="title_settings">Settings</string>
    <string name="remember_me">Remember Me</string>
    <string name="message">Message</string>
    <string name="OK">OK</string>
    <string name="title_fingerprint">Fingerprint Authentication</string>
    <string name="text_fingerprint">Please use fingerprint to login</string>
    <string name="message_success">Fingerprint matches the one registered in your phone\'s settings</string>
    <string name="error_override_hw_unavailable">You don\'t have any suited hardware for using the fingerprint</string>
    <string name="text_show_dialog">show fingerprint dialog</string>
    <string name="invoice_reference">Invoice Id / Reference Id</string>
    <string name="read_all_messages">Read All Messages</string>
    <string name="unread_all_messages">Unread All Messages</string>
    <string name="delete_all_messages">Delete All Messages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_code">QR Code</string>
    <string name="reference_invoice_id">Reference / Invoice Id</string>
    <string name="name">Name</string>
    <string name="frequency">Frequency</string>
    <string name="no_of_payments">No. of Payments</string>
    <string name="pay">Pay</string>
    <string name="iphone">iPhone</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="application_settings">Application Settings</string>
    <string name="profile_update">Profile Update</string>
    <string name="application_update">Application\nUpdate</string>
    <string name="product_details">Product Details</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="tutorial">Tutorial</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="for_mobi_account">For Mobi Account</string>
    <string name="next">Next</string>
    <string name="device_id">Device ID : </string>
    <string name="tid">TID :</string>
    <string name="ezyauth_enabled">EzyAuth Enabled :</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="share">Share</string>
    <string name="reference">Reference</string>
    <string name="or">Or</string>
    <string name="country">Country</string>
    <string name="phone_no">Phone No.</string>
    <string name="main_processor">Main Processor</string>
    <string name="coprocessor">Coprocessor</string>
    <string name="firmware_type">Firmware Type</string>
    <string name="remote_firmware_update">Remote Firmware Update</string>
    <string name="remote_key_injection_result">"Remote key injection result: "</string>
    <string name="remote_firmware_update_result">"Remote firmware update result: "</string>
    <string name="remote_config_update_result">"Remote config update result: "</string>
    <string name="local_firmware_update_result">"Local firmware update result: "</string>
    <string name="local_config_update_result">"Local config update result: "</string>
    <string name="verify_cert_result">"Verify certificate result: "</string>
    <string name="battery_low_error">Battery low error</string>
    <string name="device_comm_error">Device communication error</string>
    <string name="failed">Failed</string>
    <string name="no_update_required">No update required</string>
    <string name="server_comm_error">Server communication error</string>
    <string name="setup_error">Setup error</string>
    <string name="stopped">Stopped</string>
    <string name="success">Success</string>
    <string name="response_message">"Response message: "</string>
    <string name="ota">OTA</string>
    <string name="emv">EMV</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="please_select_app">Please Select Application</string>
    <string name="title_activity_maps">Map</string>
    <string name="logout_desc">Are you sure want to Logout this session?</string>
    <string name="VIDEO_ID">7o7KiOAO3zU</string>
    <string name="chat">MobiChat</string>
    <string name="company_name">* Company Name</string>
    <string name="business_details">Business Details</string>
    <string name="phone_number_prompt">Phone Number (eg: +601110024157)</string>
    <string name="phone">Phone</string>
    <string name="chat_text">Chat</string>
    <string name="sent_verification">Verification code will be sent to your mobile number</string>
    <string name="otp_enter_msg">SMS sent to your mobile number</string>
    <string name="otp">OTP</string>
    <string name="fullName">FullName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="select_dob">Select DOB</string>
    <string name="activation_code">Activation Code</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="office_state">Office State</string>
    <string name="office_city">Office City</string>
    <string name="office_address">Office Address</string>
    <string name="office_postalcode">Postal code</string>
    <string name="fabric">64615846bc1154be1c9e223d9a38f24896818907</string>
    <string name="facebook_app_id">584673601919622</string>
    <string name="fb_login_protocol_scheme">fb584673601919622</string>
    <string name="edit">Edit</string>
    <string name="category_name">Category Name</string>
    <string name="reply">Reply</string>
    <string name="later">Later</string>
    <string name="slip_sent">Your slip has been sent.</string>
    <string name="receipt">Reprint</string>
    <string name="refer_a_business">Refer a Business</string>
    <string name="login_title">You can use your <font color='#005BAA'>fingerprint</font> to access to the app.</string>
    <string name="welcome_to_mobi">Welcome to <font color='#005baa'>mobi</font></string>
    <string name="yo_forget">Forget your Password</string>
    <string name="didn_receive_code">Didn’t receive code?</string>
    <string name="foreign_card">*Foreign Card</string>
    <string name="domestic_card">*Domestic Card</string>
    <string name="owner_partner_name">* Owner / Partner Name</string>
    <string name="owner_partnet_contact">* Owner / Partnet Contact</string>
    <string name="nric_passport">* NRIC / Passport</string>
    <string name="forget_dec">No worries, Just Enter your Username</string>
    <string name="days_remaining">AUTO VOIDS IN: </string>
    <string name="please_wait_processing_data">Please wait, processing data</string>
    <string name="submit_text">Submit</string>
    <string name="yes_i_am_sure">Yes, I\'m Sure</string>
    <string name="processing">Processing</string>
    <string name="upgrade">Upgrade</string>
    <string name="app_update_note">
        You will need to submit documents like Business Registration,
        Bank statement and a couple more to upgrade and increase the daily limit.\n
        Are you sure you want to Upgrade?</string>
    <string name="lite_user_disabled_message">We have disabled EZYLINK LITE users!, please contact the customer support team.</string>
    <string name="amount">Amount</string>
    <string name="rm_00_00">RM 00.00</string>
    <string name="status">Status</string>
    <string name="filter_transaction_status">filter transaction status</string>
    <string name="search">Search</string>
    <string name="search_filter">Filter the list with status &amp; data !!!</string>
    <string name="pending">Pending</string>
    <string name="not_in_use">Not Used</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="click_to_set_date">Click to set date</string>
    <string name="all">All</string>
    <string name="please_choose_a_product">Please choose a product</string>
    <string name="ezywireEnabled">EZYWIRE</string>
    <string name="ezywireDisabled">EZYWIRE (Disabled)</string>
    <string name="ezyLinkEnabled">EZYLINK</string>
    <string name="ezyLinkDisabled">EZYLINK (Disabled)</string>
    <string name="digitalEnabled">DIGITAL</string>
    <string name="digitalDisabled">DIGITAL (Disabled)</string>
    <string name="retry">Retry</string>
    <string name="failure">Failure</string>
    <string name="clear_search">clear search</string>
    <string name="search_strart_typing_something">Search (Strart typing something)</string>
    <string name="filter_product">filter product</string>
    <string name="no_data_available">No data available</string>
    <string name="filter">Filter</string>
    <string name="business">Business</string>
    <string name="attempt_remaining">Attempt Remaining</string>
    <string name="warning_count">warning Count</string>
    <string name="hey">Hey!</string>
    <string name="user_name">User Name</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget Password?</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="password_strength_0">Password Strength: 0%</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="at_least_one_small_letter">At least one small letter</string>
    <string name="at_least_one_capital_letter">At least one capital letter</string>
    <string name="at_least_one_number_and_symbol">At least one number and symbol</string>
    <string name="re_enter_your_password">*Re-enter your Password</string>
    <string name="email_address">Email Address</string>
    <string name="remember_password">Remember Password?</string>
    <string name="new_user">New User?</string>
    <string name="signup">SignUp</string>
    <string name="mobi_chat">MOBI CHAT</string>
    <string name="support">SUPPORT</string>
    <string name="mobi">mobi</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_to_get_started">Sign up to Get Started</string>
    <string name="code">code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="_00_00">00:00</string>
    <string name="verify_code">Verify Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="trading_name">Trading Name</string>
    <string name="business_reg_no">Business Reg No</string>
    <string name="business_reg_name">Business Reg Name</string>
    <string name="website">Website</string>
    <string name="nature_of_business">Nature of Business</string>
    <string name="bank_name">* Bank Name</string>
    <string name="bank_account_number">* Bank Account Number</string>
    <string name="ic_copy_photo">* IC Copy Photo</string>
    <string name="_3">3%</string>
    <string name="_3_5">3.5%</string>
    <string name="whichever_is_higher">*(whichever is higher)</string>
    <string name="set_up_fee">Set up Fee:</string>
    <string name="rm_288">RM 288</string>
    <string name="rm_88">RM 88</string>
    <string name="auto_deducted_from_initial_transactions">*(auto deducted from initial transactions)</string>
    <string name="settlement_time">Settlement Time:</string>
    <string name="_5_work_days_after_transaction">5 Work Days after Transaction</string>
    <string name="no_worries_just_enter_your_nemail_and_username">No worries, Just Enter your \nemail and username</string>
    <string name="rm_1">RM 1</string>
</resources>