<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history_selector"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_selector"
        android:title="@string/title_notifications" />

    <!--<item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_selector"
        android:title="@string/title_chat" />-->

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/profile_selector"
        android:title="@string/title_settings" />

</menu>
