<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".dialogs.SearchFilterDialog">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/search_filter"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_status" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/radio_pending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pending" />

        <RadioButton
            android:id="@+id/radio_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success" />

        <RadioButton
            android:id="@+id/radio_not_in_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_in_use" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from_date" />

            <TextView
                android:id="@+id/textView_from_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:text="@string/click_to_set_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_date" />

            <TextView
                android:id="@+id/textView_to_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:text="@string/click_to_set_date" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/search"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>