<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mobiversa.ezy2pay.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.mobiversa.ezy2pay.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_historyDetailFragment2"
            app:destination="@id/historyDetailFragment"
            app:popUpTo="@id/navigation_history" />
        <action
            android:id="@+id/action_navigation_history_to_transactionStatusFragment"
            app:destination="@id/transactionStatusFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mobiversa.ezy2pay.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


    <!--<fragment
        android:id="@+id/navigation_chat"
        android:name="com.mobiversa.ezy2pay.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/chat_fragment" />-->

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.mobiversa.ezy2pay.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/historyDetailFragment"
        android:name="com.mobiversa.ezy2pay.ui.history.historyDetail.HistoryDetailFragment"
        android:label="history_detail_fragment_copy"
        tools:layout="@layout/history_detail_fragment_new" />
    <fragment
        android:id="@+id/transactionStatusFragment"
        android:name="com.mobiversa.ezy2pay.ui.history.transactionStatus.TransactionStatusFragment"
        android:label="TransactionStatusFragment" />

</navigation>