<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customdialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/xxhdpi_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chat"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/t_xxh_18"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxhdpi_20"
            android:background="@drawable/rect_bor"
            android:hint="@string/name"
            android:maxLines="1"
            android:textColorHint="@color/grey"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/xxhdpi_5"
            android:paddingTop="@dimen/xxhdpi_10"
            android:paddingBottom="@dimen/xxhdpi_10"
            android:text=""
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxhdpi_10"
            android:background="@drawable/rect_bor"
            android:hint="@string/phone"
            android:maxLines="1"
            android:textColorHint="@color/grey"
            android:inputType="phone"
            android:paddingLeft="@dimen/xxhdpi_5"
            android:paddingTop="@dimen/xxhdpi_10"
            android:paddingBottom="@dimen/xxhdpi_10"
            android:text=""
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/edit_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxhdpi_10"
            android:background="@drawable/rect_bor"
            android:hint="@string/company_name"
            android:maxLines="1"
            android:textColorHint="@color/grey"
            android:inputType="text"
            android:paddingLeft="@dimen/xxhdpi_5"
            android:paddingTop="@dimen/xxhdpi_10"
            android:paddingBottom="@dimen/xxhdpi_10"
            android:text=""
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/xxhdpi_20"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/xxhdpi_5"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:background="@drawable/rect_bor_blue"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/t_xxh_18" />

            <Button
                android:id="@+id/button_chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/xxhdpi_5"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:background="@drawable/rect_bor_blue"
                android:text="@string/chat_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/t_xxh_18" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>